--- a/PMGreact/package.json
+++ b/PMGreact/package.json
@@ -41,6 +41,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
+    "react-sticky": "^5.0.5",
     "remarkable": "^1.7.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
