--- a/PMGreact/package.json
+++ b/PMGreact/package.json
@@ -40,6 +40,7 @@
     "pug": "^2.0.0-beta6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-google-login": "^2.5.8",
     "react-router": "^3.0.0",
     "react-sticky": "^5.0.5",
     "remarkable": "^1.7.1",
