--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "simple-website-2016",
   "version": "1.0.0",
-  "description": "Code for CS 336 project with Jay Bigelow and Frank Boye, created off the code in CS 336 lab 12, which was created from a react tutorial by Pete Hunt.",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build-css",
-    "watch": "nodemon server -e js",
-    "start": "node server"
+    "build": "webpack --progress",
+    "dev": "kill $(pgrep node) ; nodemon --ignore app/ server.js & webpack-dev-server --progress --history-api-fallback&",
+    "stop": "kill $(pgrep node)",
+    "install": "webpack --progress --config ./webpack.production.config.js",
+    "start": "node server.js"
   },
   "author": "Emmanuel Boye and Jay Bigelow",
   "license": "ISC",
@@ -38,7 +40,9 @@
     "pug": "^2.0.0-beta6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-google-login": "^2.5.8",
     "react-router": "^3.0.0",
+    "react-sticky": "^5.0.5",
     "remarkable": "^1.7.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
@@ -47,21 +51,5 @@
   "devDependencies": {
     "nodemon": "^1.11.0",
     "webpack-dev-server": "^1.16.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/meliornox/cs336/tree/project.git"
-  },
-  "keywords": [
-    "react",
-    "song"
-  ],
-  "author": "meliornox, franksowah",
-  "bugs": {
-    "url": "https://github.com/Calvin-Music-Guild-Website/project.git"
-  },
-  "homepage": "https://github.com/Calvin-Music-Guild-Website/project.git",
-  "engines": {
-    "node": "0.12.x"
   }
 }
