--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --progress",
-    "dev": "kill $(pgrep node) ; nodemon --ignore app/ server.js & webpack-dev-server --progress --history-api-fallback&",
+    "dev": "nodemon --ignore app/ server.js & webpack-dev-server --progress --history-api-fallback&",
     "stop": "kill $(pgrep node)",
     "install": "webpack --progress --config ./webpack.production.config.js",
     "start": "node server.js"
@@ -44,6 +44,7 @@
     "react-router": "^3.0.0",
     "react-spotify-player": "^1.0.1",
     "react-sticky": "^5.0.5",
+    "react-youtube": "^7.3.0",
     "remarkable": "^1.7.1",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
