Formatting page's look

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^15.4.1",
     "react-google-login": "^2.5.8",
     "react-router": "^3.0.0",
+    "react-simple-dropdown": "^1.1.5",
     "react-spotify-player": "^1.0.1",
     "react-sticky": "^5.0.5",
     "react-youtube": "^7.3.0",
